Error page fixed and deleting extra html from template

--- a/stepx/src/main/resources/templates/index.html
+++ b/stepx/src/main/resources/templates/index.html
@@ -108,8 +108,8 @@
   {{>header}}
 
   {{#showError}}
-    {{>partials/error-page}}
-{{/showError}}
+    {{>partials/ errorPage}}
+  {{/showError}}
 
   <section id="intro" class="position-relative mt-4">
     <div class="container-lg">
