--- a/stepx/src/main/resources/templates/ticket.html
+++ b/stepx/src/main/resources/templates/ticket.html
@@ -78,27 +78,28 @@
             </tr>
             <tr>
                 <td><strong>Cliente:</strong></td>
-                <td>{{ customerName}}</td>
+                <td>{{customerName}}</td>
             </tr>
             <tr>
                 <td><strong>Email:</strong></td>
-                <td>{{ email}}</td>
+                <td>{{email}}</td>
             </tr>
             <tr>
                 <td><strong>Phone Contact:</strong></td>
-                <td>{{ phone}}</td>
+                <td>{{phone}}</td>
             </tr>
             <tr>
                 <td><strong>Address:</strong></td>
-                <td>{{ address}}</td>
+                <td>{{address}}</td>
             </tr>
             <tr>
                 <td><strong>Country:</strong></td>
-                <td>{{ country}}</td>
+                <td>{{country}}</td>
             </tr>
-
-
-
+            <tr>
+                <td><strong>Coupon Used:</strong></td>
+                <td>{{coupon}}</td> <!-- Added coupon information -->
+            </tr>
         </table>
         <table class="items-table">
             <thead>
@@ -107,7 +108,7 @@
                     <th>Brand</th>
                     <th>Cant</th>
                     <th>Price</th>
-                    <th>size</th>
+                    <th>Size</th>
                 </tr>
             </thead>
             <tbody>
@@ -119,9 +120,8 @@
                     <td>{{shoe.price}}</td>
                     <td>{{size}}</td>
                 </tr>
-                {{/products}} 
+                {{/products}}
             </tbody>
-
         </table>
         <table class="totals">
             <tr>
