--- a/stepx/src/main/resources/templates/create-product.html
+++ b/stepx/src/main/resources/templates/create-product.html
@@ -151,6 +151,7 @@
                                 <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep">Publish Shoe</button>
                                 <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep">Cancel</button>
                             </div>
+                            <input type="hidden" name="_csrf" value="{{token}}"/>
                         </form>
                     </div>
                 </div>
