--- a/stepx/src/main/resources/templates/partials/checkout-itemsList.html
+++ b/stepx/src/main/resources/templates/partials/checkout-itemsList.html
@@ -57,9 +57,9 @@
     {{/cartItems}}
 </div>
 
-{{#setSubtotal}} 
+{{#stocskAvailable}}
 <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100" onclick="recalculate()">Recalculate</button>
-{{/setSubtotal}}
+{{/stocskAvailable}}
 <!-- total -->
 <div class="mt-4 pt-4 border-top">
     <div class="d-flex justify-content-between mb-2">
