load more comments

--- a/stepx/src/main/resources/templates/partials/singleProduct-reviewList.html
+++ b/stepx/src/main/resources/templates/partials/singleProduct-reviewList.html
@@ -33,4 +33,10 @@
     
     </div>
     {{/review}}
+    {{^review}}
+    <div class="col-lg-12" style="display: flex; justify-content: center;">
+        <div class="review-content">
+            <p>No more reviews available.</p>
+        </div>
+    {{/review}}
 </div>
