Many RestControllers, Shop page withModals, addtocart, singleProduct page, profile page with update information and ordershoes with load more shoes and see orderitems

--- a/backend/src/main/resources/templates/partials/profileOrderItems.html
+++ b/backend/src/main/resources/templates/partials/profileOrderItems.html
@@ -3,13 +3,13 @@
     <!-- Imagen del producto (lado izquierdo) -->
     <div class="col-lg-2 col-md-3 col-sm-2 me-4">
         <a href="#" title="product-image">
-            <img src="/shop/{{id_item}}/image/1" class="img-fluid" alt="single-product-item">
+            <img src="/shop/{{id}}/image/1" class="img-fluid" alt="single-product-item">
         </a>
     </div>
     
     <!-- Información del producto (lado derecho) -->
     <div class="ms-3 flex-grow-1">
-        <h5 class="mb-2">{{name}}</h5>
+        <h5 class="mb-2">{{shoeName}}</h5>
         <div class="d-flex flex-column">
             <div class="price-wrapper mb-2">
                 <span class="fw-bold">Price: {{price}}</span>
