--- a/backend/src/main/resources/templates/profile.html
+++ b/backend/src/main/resources/templates/profile.html
@@ -56,7 +56,7 @@
           <div class="profile-sidebar bg-gray p-4 rounded-3">
             <div class="profile-image text-center mb-4">
               <div class="image-wrapper mb-3" id="user-image">
-                <img src="/shop/{{user_id}}/imageUser" alt="Profile Picture" class="rounded-circle"
+                <img src="/shop/{{id}}/imageUser" alt="Profile Picture" class="rounded-circle"
                   style="width: 150px; height: 150px; object-fit: cover;">
               </div>
               <form>
