--- a/backend/src/main/resources/templates/shop.html
+++ b/backend/src/main/resources/templates/shop.html
@@ -123,7 +123,7 @@
             <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
               <div class="product-card position-relative">
                 <div class="card-img">
-                  <img src="/shop/{{id}}/image/1" alt="product-item" class="product-image img-fluid">
+                  <img src="{{imageUrl1}}" alt="product-item" class="product-image img-fluid">
                   <div class="cart-concern position-absolute d-flex justify-content-center">
                   <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
                     <!--Delete Buttom-->
