--- a/backend/src/main/resources/templates/partials/cart-confirmation-view.html
+++ b/backend/src/main/resources/templates/partials/cart-confirmation-view.html
@@ -10,7 +10,7 @@
              style="height: 150px; width: auto; display: block; margin: 0 auto;">
 
         <div style="margin-bottom: 4%;margin-left: 5%; margin-right: 5%;box-shadow: 0px 0px 7px 1px gray;display: flex; align-items: center; justify-content: center; gap: 20px; margin-top: 20px;">
-            <img src="/shop/{{id}}/image/1" 
+            <img src="{{imageUrl1}}" 
                  alt="Product Image" 
                  style="width: 30%; max-height: 30%;">
 
@@ -25,7 +25,7 @@
                     <p style="font-weight: 700; text-transform: uppercase;">PRICE: <strong style="color: black;">${{price}}</strong></p>
                 </div>
                 <div class="description-confirmation">
-                    <p style="font-weight: 400; color: black;font-family: sans-serif;">{{shortdescription}}</p>
+                    <p style="font-weight: 400; color: black;font-family: sans-serif;">{{shortDescription}}</p>
                 </div>
             </div>
         </div>
