single product fixed to be shown in admin requests

--- a/backend/src/main/resources/templates/single-product.html
+++ b/backend/src/main/resources/templates/single-product.html
@@ -214,7 +214,7 @@
                   
                       </div>
                       {{#admin}}
-                      <button id="deleteReviewButton" onclick="deleteReview('{{shoe.id}}','{{id}}')" style="padding-top: 30px;">
+                      <button id="deleteReviewButton" onclick="deleteReview('{{id}}','{{id}}')" style="padding-top: 30px;">
                         <i class="fa-solid fa-trash"></i>
                       </button>
                       {{/admin}}
