coupon working dto and docker

--- a/backend/src/main/resources/templates/email.html
+++ b/backend/src/main/resources/templates/email.html
@@ -60,7 +60,7 @@
         
         <p>As a token of our appreciation, here's a special discount just for you:</p>
         
-        <div class="coupon">STEPX10DISCOUNT</div>
+        <div class="coupon">STEPXDISCOUNT10</div>
         
         <p>Use this coupon at checkout to receive 10% off your next purchase.</p>
         
