--- a/backend/src/main/resources/templates/single-product.html
+++ b/backend/src/main/resources/templates/single-product.html
@@ -86,7 +86,7 @@
             <div class="product-price py-3">
               <strong class="fs-5 fw-bold">${{price}}</strong>
             </div>
-            <p>{{shortDescription}}</p>
+            <p>{{shortdescription}}</p>
             {{#isAuthenticated}}
             <div class="cart-wrap padding-small">
               <div class="swatch product-select" data-option-index="1">
