--- a/backend/src/main/resources/templates/partials/cart-confirmation-view.html
+++ b/backend/src/main/resources/templates/partials/cart-confirmation-view.html
@@ -25,7 +25,7 @@
                     <p style="font-weight: 700; text-transform: uppercase;">PRICE: <strong style="color: black;">${{price}}</strong></p>
                 </div>
                 <div class="description-confirmation">
-                    <p style="font-weight: 400; color: black;font-family: sans-serif;">{{shortDescription}}</p>
+                    <p style="font-weight: 400; color: black;font-family: sans-serif;">{{shortdescription}}</p>
                 </div>
             </div>
         </div>
