--- a/backend/src/main/resources/templates/partials/quick-view-modal.html
+++ b/backend/src/main/resources/templates/partials/quick-view-modal.html
@@ -15,7 +15,7 @@
         </div>
         <span class="product-price fs-3">${{price}}</span>
         <div class="product-details">
-          <p class="fs-7">{{shortDescription}}</p>
+          <p class="fs-7">{{shortdescription}}</p>
         </div>
       </div>
     </div> 
