Checkout page functioning and generates tickets, reacalculate functioning and delete order item from cart too

--- a/backend/src/main/resources/templates/checkout.html
+++ b/backend/src/main/resources/templates/checkout.html
@@ -174,10 +174,10 @@
                 {{/cartItems}}
               </div>
 
-              {{#stocskAvailable}}
+              {{#stocksAvailable}}
               <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100" id="recalculateButtom"
                 onclick="recalculate()">Recalculate</button>
-              {{/stocskAvailable}}
+              {{/stocksAvailable}}
               <!-- total -->
               <div class="mt-4 pt-4 border-top">
                 <div class="d-flex justify-content-between mb-2">
