--- a/backend/src/main/resources/templates/ticket.html
+++ b/backend/src/main/resources/templates/ticket.html
@@ -114,10 +114,10 @@
             <tbody>
                 {{#products}}
                 <tr>
-                    <td>{{shoe.name}}</td>
-                    <td>{{shoe.brand}}</td>
+                    <td>{{shoeName}}</td>
+                    <td>{{brand}}</td>
                     <td>{{quantity}}</td>
-                    <td>{{shoe.price}}</td>
+                    <td>{{price}}</td>
                     <td>{{size}}</td>
                 </tr>
                 {{/products}}
