footer and implementing the css

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -323,6 +323,7 @@
     </div>
   </div>
 </main>
+<app-footer></app-footer>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
