admin charts in admin component. only have correct size when window is resized

--- a/frontend/src/app/components/admin/admin.component.html
+++ b/frontend/src/app/components/admin/admin.component.html
@@ -10,6 +10,22 @@
     
     <!-- Admin Content Area -->
     <app-admin-dashboard></app-admin-dashboard>
+
+
+    <!-- Charts -->
+<div class="row">
+  <div class="col-12">
+    <app-order-count-chart></app-order-count-chart>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
+    <app-money-gained-chart></app-money-gained-chart>   
+  </div>
+</div>
+
+    
     
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container-fluid">
