header component working in Angular frontend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,8 @@
 
 
-
-
+<app-header></app-header>
 <app-coupon></app-coupon>
+<app-featured-products></app-featured-products>
 <app-footer></app-footer>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
