fully reactive charts

--- a/frontend/src/app/components/admin/order-count-chart.component.html
+++ b/frontend/src/app/components/admin/order-count-chart.component.html
@@ -26,6 +26,7 @@
           [showYAxisLabel]="showYAxisLabel"
           [xAxisLabel]="xAxisLabel"
           [yAxisLabel]="yAxisLabel"
+          [yAxisTickFormatting]="yAxisTickFormatting"
           (select)="onSelect($event)">
         </ngx-charts-line-chart>
       </div>
