href to routerlink

--- a/frontend/src/app/components/shop/shop.component.html
+++ b/frontend/src/app/components/shop/shop.component.html
@@ -55,8 +55,8 @@
       <main class="col-lg-10 col-md-8">
         <div>
             <div class="btn-wrap">
-                <a href="/create-shoe">
-                    <button href="/create-shoe" class="btn btn-black btn-medium text-uppercase hvr-sweep-to-right"
+                <a routerLink="/create-shoe">
+                    <button routerLink="/create-shoe" class="btn btn-black btn-medium text-uppercase hvr-sweep-to-right"
                         style="margin-bottom: 30px;">Create Shoe</button>
                 </a>
             </div>
