--- a/frontend/src/app/components/shop/shoe-card.component.html
+++ b/frontend/src/app/components/shop/shoe-card.component.html
@@ -5,21 +5,22 @@
             <div class="cart-concern position-absolute d-flex justify-content-center">
                 <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
                     
-                    <!--Delete Buttom-->
-                    <button type="button"  class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modaltoggle">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                          <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/>
-                        </svg>
+                    <!-- Botón Eliminar -->
+                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modaltoggle"
+                      (click)="deleteClick.emit(shoe)">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z" />
+                      </svg>
                     </button>
 
+
                     <!--Edit Buttom-->
-                    <a href="#">
-                        <button type="button" class="btn btn-light">
+                        <button type="button" class="btn btn-light" [routerLink]="['/shop/edit', shoe.id]">
                           <svg class="icon-pencil">
                             <use xlink:href="#icon-pencil"></use>
                           </svg>
                         </button>
-                    </a>
+                  
 
                     <!--modal of carriage(check)-->
                     <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modaltoggle">
