--- a/frontend/src/app/components/shop/shop.component.html
+++ b/frontend/src/app/components/shop/shop.component.html
@@ -53,7 +53,8 @@
 
       <!-- Lista de zapatos -->
       <main class="col-lg-10 col-md-8">
-        <div>
+
+        <div *ngIf="isAdmin">
             <div class="btn-wrap">
                 <a routerLink="/create-shoe">
                     <button routerLink="/create-shoe" class="btn btn-black btn-medium text-uppercase hvr-sweep-to-right"
@@ -66,7 +67,10 @@
         <div class="product-content product-store d-flex justify-content-between flex-wrap">
 
             <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3" *ngFor="let shoe of shoes">
-                <app-shoe-card [shoe]="shoe" (shoeDeleted)="onShoeDeleted($event)"></app-shoe-card>
+                <app-shoe-card [shoe]="shoe"
+                [isAdmin]="isAdmin"
+                [isUser]="isUser"
+                (shoeDeleted)="onShoeDeleted($event)"></app-shoe-card>
             </div>
 
         </div>
