--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 
 
 <app-header></app-header>
+<app-image-collage-big></app-image-collage-big>
 <app-coupon></app-coupon>
 <app-featured-products></app-featured-products>
 <app-footer></app-footer>
